<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblChopp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/CHOPP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Chopp" />

    <TextView
        android:id="@+id/lblPizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/PIZZAS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChopp"
        tools:text="Pizzas" />

    <TextView
        android:id="@+id/lblRecheios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/RECHEIOS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPizzas"
        tools:text="Recheios" />

    <TextView
        android:id="@+id/lblPessoas"
        android:layout_width="63dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/PESSOAS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecheios"
        tools:text="Pessoas" />

    <TextView
        android:id="@+id/lblConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="108dp"
        android:text="@string/CONSUMO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPessoas"
        tools:text="Consumo" />

    <TextView
        android:id="@+id/lblServicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/SERVICO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblConsumo"
        tools:text="Serviço" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/TOTAL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblServicos"
        tools:text="Total" />

    <TextView
        android:id="@+id/lblValorPessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/VALORPESSOA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotal"
        tools:text="Por Pessoa" />

    <EditText
        android:id="@+id/txtChopp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblChopp"
        app:layout_constraintStart_toEndOf="@+id/lblChopp" />

    <EditText
        android:id="@+id/txtPizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPizzas"
        app:layout_constraintStart_toEndOf="@+id/lblPizzas" />

    <EditText
        android:id="@+id/txtRecheios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/lblRecheios"
        app:layout_constraintTop_toBottomOf="@+id/txtPizzas" />

    <EditText
        android:id="@+id/txtPessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPessoas"
        app:layout_constraintStart_toEndOf="@+id/lblPessoas" />

    <TextView
        android:id="@+id/lblConsumo2"
        android:layout_width="46dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="100dp"
        android:text="@string/CONSUMO2"
        app:layout_constraintStart_toEndOf="@+id/lblConsumo"
        app:layout_constraintTop_toBottomOf="@+id/txtPessoas"
        tools:text="Valor " />

    <TextView
        android:id="@+id/lblServico2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/SERVICO2"
        app:layout_constraintStart_toEndOf="@+id/lblServicos"
        app:layout_constraintTop_toBottomOf="@+id/lblConsumo2"
        tools:text="Valor" />

    <TextView
        android:id="@+id/lblTotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/TOTAL2"
        app:layout_constraintStart_toEndOf="@+id/lblTotal"
        app:layout_constraintTop_toBottomOf="@+id/lblServico2"
        tools:text="Valor" />

    <TextView
        android:id="@+id/lblValorPessoa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/VALORPESSOA2"
        app:layout_constraintStart_toEndOf="@+id/lblValorPessoa"
        app:layout_constraintTop_toBottomOf="@+id/lblTotal2"
        tools:text="Valor" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onCalcular"
        android:text="@string/CALCULAR"
        app:layout_constraintBottom_toTopOf="@+id/lblConsumo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPessoas"
        tools:text="Calcular" />

</android.support.constraint.ConstraintLayout>